--- a/app/layouts/core/default.phtml
+++ b/app/layouts/core/default.phtml
@@ -89,7 +89,7 @@
             <div class="container">
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-                        <li><a>Договора</a></li>
+                        <li><a href="<?=$this->baseUrl('manager/billing/agreements')?>">Договора</a></li>
                         <li><a href="<?=$this->baseUrl('manager/tariffication/lines')?>">Тарифы</a></li>
                         <li><a href="<?=$this->baseUrl('manager/counseling-structure/lines')?>">Линии Консультации</a></li>
                         <li><a href="<?=$this->baseUrl('manager/counseling-structure/groups')?>">Группы/Специалисты</a></li>
